<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity2">

    <data>

        <variable
            name="player_choose_value"
            type="String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/diegoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{player_choose_value.toUpperCase()}"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@id/guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide2" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testando1"
            android:textSize="@dimen/xxx"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/guide2"
            app:layout_constraintEnd_toStartOf="@id/text_2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testando2"
            android:textSize="@dimen/xxx"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/guide2"
            app:layout_constraintEnd_toStartOf="@id/text_3"
            app:layout_constraintStart_toEndOf="@id/text_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testando3"
            android:textSize="@dimen/xxx"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/guide2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/papel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/abacate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button2"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toBottomOf="@id/guide"
            app:layout_editor_absoluteX="147dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/tesoura"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/button1"
            app:layout_constraintTop_toBottomOf="@id/guide" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>